# Autonomous_Fire_Risk_Surveyor-Laptop-to-Computer

src/41068_ignition_bringup_with_drone/41068_ignition_bringup/config/: 41068.rviz
src/afr_planning/: package.xml  setup.cfg  setup.py
src/afr_planning/afr_planning/: astar_planner.py
src/afr_planning/config/: twist_mux.yaml
src/afr_planning/launch/: bringup.launch.py
src/forest_core/: LICENSE  package.xml  setup.cfg  setup.py
src/forest_core/forest_core/: avoid_lidar.py  frontier_explorer.py
src/forest_core/launch/: avoid_lidar.launch.py  both.launch.py  frontier_explorer.launch.py
src/uts_forest_bringup/: package.xml  setup.cfg  setup.py
src/uts_forest_bringup/launch/: bringup.launch.py
src/uts_forest_bringup/resource/: uts_forest_bringup
src/uts_forest_description/: CMakeLists.txt  package.xml
src/uts_forest_description/models/x3_uav/: model.config  model.sdf
src/uts_forest_description/worlds/: forest_with_uav.sdf
